--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -10,34 +10,38 @@
   <body>
     <section class="main-container">
       <h1 class="content-header">Our Menu</h1>
-      <div class="sec" id="chicken-sec">
-        <h3 class="sec-title" id="chicken">Chicken</h3>
-        <p class="content">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, veniam
-          corporis. Commodi aliquam pariatur facilis ratione, nemo assumenda a,
-          nostrum similique nihil et blanditiis! Quo quibusdam veniam eveniet et
-          ducimus!
-        </p>
-      </div>
-      <div class="sec" id="beef-sec">
-        <h3 class="sec-title" id="beef">Beef</h3>
-        <p class="content">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate,
-          ratione quasi voluptas facere perspiciatis, libero, sit labore ullam
-          autem optio ipsam inventore eligendi cum. Explicabo dolorem vitae
-          similique voluptas error itaque omnis necessitatibus iusto provident
-          rerum veniam tenetur deleniti expedita excepturi nam incidunt impedit
-          quia laboriosam, ipsa magnam, ipsam aut?
-        </p>
-      </div>
-      <div class="sec" id="sushi-sec">
-        <h3 class="sec-title" id="sushi">Sushi</h3>
-        <p class="content">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
-          sequi numquam ut expedita fugiat quibusdam est doloremque culpa
-          distinctio vero voluptas quod incidunt, magnam aspernatur doloribus
-          possimus, id ullam placeat quis laborum! Quos, nam dolor!
-        </p>
+
+      <div class="main-section">
+        <div class="sec" id="chicken-sec">
+          <h3 class="sec-title" id="chicken">Chicken</h3>
+          <p class="content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae,
+            veniam corporis. Commodi aliquam pariatur facilis ratione, nemo
+            assumenda a, nostrum similique nihil et blanditiis! Quo quibusdam
+            veniam eveniet et ducimus!tenetur deleniti expedita excepturi nam
+            incidunt impedit quia laboriosam, ipsa magnam, ipsam aut?
+          </p>
+        </div>
+        <div class="sec" id="beef-sec">
+          <h3 class="sec-title" id="beef">Beef</h3>
+          <p class="content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate,
+            ratione quasi voluptas facere perspiciatis, libero, sit labore ullam
+            autem optio ipsam inventore eligendi cum. Explicabo dolorem vitae
+            similique voluptas error itaque omnis necessitatibus iusto provident
+            rerum veniam tenetur deleniti expedita excepturi nam incidunt
+            impedit quia laboriosam, ipsa magnam, ipsam aut?
+          </p>
+        </div>
+        <div class="sec" id="sushi-sec">
+          <h3 class="sec-title" id="sushi">Sushi</h3>
+          <p class="content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
+            sequi numquam ut expedita fugiat quibusdam est doloremque culpa
+            distinctio vero voluptas quod incidunt, magnam aspernatur doloribus
+            possimus, id ullam placeat quis laborum! Quos, nam dolor!
+          </p>
+        </div>
       </div>
     </section>
   </body>
